Changed size of forecast days to fix image shift

--- a/src/style.css
+++ b/src/style.css
@@ -140,6 +140,9 @@ h2 {
 .card:hover {
   background: rgba(255, 255, 255, 0.5);
 }
+.forecast-day {
+  font-size: 16px;
+}
 #hourly-forecast-display {
   text-align: center;
 }
